# Digital-Audio-Effects

./: .gitignore  README.md
Chorus Plug-In/: Chorus Plug-In.jucer
Chorus Plug-In/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Compressor Plug-In/: Compressor Plug-In.jucer
Compressor Plug-In/Source/: PluginEditor.h  PluginProcessor.h
Delay Plug-In/: Delay Plug-In.jucer
Delay Plug-In/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Delay Plug-In/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Distortion Plug-In/: Distortion Plug-In.jucer
Distortion Plug-In/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Distortion Plug-In/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Effect_Classes/: AllPassFilter.cpp  AllPassFilter.h  Chorus.cpp  CombFilter.h  Compressor.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  EnvelopeDetector.cpp  EnvelopeDetector.h  Flanger.cpp  Flanger.h  GUIGraphics.cpp  GUIGraphics.h  IIRFilter.cpp  IIRFilter.h  LFO.cpp  LFO.h  Limiter.cpp  Limiter.h  Reverb.cpp  Reverb.h  Vibrado.h
Flanger Plug-In/: Flanger Plug-In.jucer
Flanger Plug-In/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
IIRFilter Plug-In/: IIRFilter Plug-In.jucer
IIRFilter Plug-In/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Limiter Plug-In/: Limiter Plug-In.jucer
Limiter Plug-In/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
Reverb Plug-In/: Reverb Plug-In.jucer
Reverb Plug-In/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Vibrado Plug-In/: Vibrado Plug-In.jucer
Vibrado Plug-In/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: Doxyfile  DoxygenLayout.xml  README.md
plugins/Chorus/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Compressor/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Delay/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Distortion/: CMakeLists.txt  PluginEditor.cpp  (+3 more)
plugins/IIRFIlter/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: README.md  build_LINUX.sh  build_MACOS.sh  build_WIN.bat
src/: CMakeLists.txt  Chorus.cpp  Chorus.h  CombFilter.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  EnvelopeDetector.h  Flanger.cpp  Flanger.h  GUIGraphics.h  IIRFilter.cpp  IIRFilter.h  Limiter.cpp  Limiter.h  Reverb.cpp  Reverb.h  Vibrado.cpp  Vibrado.h
src/base/: CMakeLists.txt  DynamicsProcessor.h  EffectProcessorBase.h  ModulationProcessor.h
src/utils/: AllPassFilter.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  CombFilter.cpp  CombFilter.h  EnvelopeDetector.cpp  EnvelopeDetector.h  InterpolatedAllPassFilter.cpp  InterpolatedAllPassFilter.h  InterpolatedCombFilter.cpp  InterpolatedCombFilter.h  LFO.cpp  LFO.h  LinearInterpolationCircularBuffer.cpp  LinearInterpolationCircularBuffer.h  ModulatedAllPassFilter.cpp  ModulatedAllPassFilter.h  ModulatedCombFilter.cpp  ModulatedCombFilter.h
src/utils/custom_juce_classes/: AssetManager.h  CMakeLists.txt  GUIGraphics.cpp  GUIGraphics.h  LevelMeter.h  LevelMeterSource.h
src/utils/extras/: AudioChannelUtilities.h  FirstOrderSmoother.h  GainUtilities.h
src/utils/saturators/: AsymetricClipper.h  CMakeLists.txt  Diode.h  HardClipper.h  SoftClipper.h  VaccumTube.h
(+25 files in other folders)
