target_sources(${PROJECT_NAME}
    PRIVATE
        CircularBuffer.cpp
        CircularBuffer.h
        LinearInterpolationCircularBuffer.cpp
        LinearInterpolationCircularBuffer.h
        AllPassFilter.cpp
        AllPassFilter.h
        InterpolatedAllPassFilter.cpp
        InterpolatedAllPassFilter.h
        ModulatedAllPassFilter.cpp
        ModulatedAllPassFilter.h
        CombFilter.cpp
        CombFilter.h
        InterpolatedCombFilter.cpp
        InterpolatedCombFilter.h
        ModulatedCombFilter.cpp
        ModulatedCombFilter.h
        EnvelopeDetector.cpp
        EnvelopeDetector.h
        LFO.cpp
        LFO.h
        extras/FirstOrderSmoother.h
        extras/AudioChannelUtilities.h
        extras/GainUtilities.h
)

add_subdirectory(saturators)
include_directories(saturators)

add_subdirectory(custom_juce_classes)
include_directories(custom_juce_classes)